fixed item image: better cropped

--- a/creativecases/public/style.css
+++ b/creativecases/public/style.css
@@ -265,7 +265,7 @@ li {
 }
 .product-image {
     width: 100%;
-    height: 80%;
+    aspect-ratio: 80%;
     object-fit: cover;
 }
 .contact-wrapper {
@@ -434,9 +434,9 @@ li {
     place-items: center;
 }
 .item-img-wrapper img {
-    width: 80%;
-    height: 80%;
-    object-fit: cover;
+    width: 85%;
+    height: 85%;
+    object-fit: contain;
 }
 .item-info-wrapper {
     height: 100%;
